--- a/planit/main_app/templates/about.html
+++ b/planit/main_app/templates/about.html
@@ -31,9 +31,9 @@
     <br>
     Thank you for considering Planit for your next event. We look forward to helping you plan the perfect gathering!
 </p>
-<section>
+<div class="stars">
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
-</section>
+</div>
 {% endblock %}
