--- a/planit/main_app/templates/main_app/polls_detail.html
+++ b/planit/main_app/templates/main_app/polls_detail.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block main %}
+{% block content %}
 <div class="row">
     <h3>Cast Your Vote</h3>
             <div class="row">
