--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -4,44 +4,61 @@
 <h1 class="myEventsTitle">Event <span class="it">Details</span></h1>
 
 <div class="row">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title">{{ event.name }}</span>
-                <p class="cardDetails">Who: {{ event.who }} </p>
-                <p class="cardDetails">What: {{ event.what }}</p>
-                <p class="cardDetails">When: {{ event.when }} </p>
-                <p class="cardDetails">Where: {{ event.where }} </p>
-                <p class="cardDetails">Why: {{event.why}} </p>
-            </div>
-           <div class="card-action">
-                <a class="itLight" href="{% url 'events_update' event.id %}">Edit</a>
-                <a class="deleteBtn" href="{% url 'events_delete' event.id %}">Delete</a>
-            </div> 
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">{{ event.name }}</span>
+            <p class="cardDetails">Who: {{ event.who }} </p>
+            <p class="cardDetails">What: {{ event.what }}</p>
+            <p class="cardDetails">When: {{ event.when }} </p>
+            <p class="cardDetails">Where: {{ event.where }} </p>
+            <p class="cardDetails">Why: {{event.why}} </p>
         </div>
+        <div class="card-action">
+            <a class="itLight" href="{% url 'events_update' event.id %}">Edit</a>
+            <a class="deleteBtn" href="{% url 'events_delete' event.id %}">Delete</a>
+        </div>
+    </div>
 
 </div>
 <br>
 <h2 style="color:white;">Polls: </h2>
 <a href="{% url 'polls_create' %}">Create a new poll</a>
-<form action="" method="POST">
-    {% csrf_token %}
-    <div class="row">
-        {% for poll in event.poll_set.all %}
-            <div class="card">
-                <div class="card-content">
-             <a href="{% url 'polls_detail' poll.id %}">Poll Details</a> 
-                   <span class="card-title">{{ poll.question }}</span>
-                    <p>Option 1:  {{ poll.choice_one }} </p>
-                    <p>Option 2: {{ poll.choice_two }} </p>
-                    <p>Option 3: {{ poll.choice_three }} </p> 
-                </div>
-                {% endfor %} 
-                <div class="card-action">
-                    <a href="{% url 'events_update' event.id %}">Edit</a>
-                    <a href="{% url 'events_delete' event.id %}">Delete</a>
-                </div>  
-            </div>
+<div class="row">
+    <div class="col s6">
+        <p>Add Poll</p>
+        <form method="POST">
+            {% csrf_token %}
+            <!-- Render the inputs -->
+            {{ poll_form.as_p }}
+            <input type="submit" class="btn" value="Add Poll">
+        </form>
+
     </div>
-</form>
+    <div class="col s6">
+        <form action="" method="POST">
+            {% csrf_token %}
+            <div>
+                {% for poll in event.poll_set.all %}
+                <div class="card">
+                    <div class="card-content">
+                        <a href="{% url 'polls_detail' poll.id %}">Poll Details</a>
+                        <span class="card-title">{{ poll.question }}</span>
+                        <p>Option 1: {{ poll.choice_one }} </p>
+                        <p>Option 2: {{ poll.choice_two }} </p>
+                        <p>Option 3: {{ poll.choice_three }} </p>
+                    </div>
+
+                    <div class="card-action">
+                        <a href="{% url 'events_update' event.id %}">Edit</a>
+                        <a href="{% url 'events_delete' event.id %}">Delete</a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </form>
+    </div>
+
+</div>
+
 
 {% endblock %}
