--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-<h1> Group <span class="it">Details</span></h1>
+<h1 class="myEventsTitle"> Group <span class="it">Details</span></h1>
 
 <div class="row">
   <div class="col s6 col-offset-3">
     <div class="card">
       <div class="card-content">
         <span class="card-title">{{ group.name }}</span>
+        <p class="cardDetails">Members: {{ group.members }}</p>
         <p class="cardDetails">Creator: {{ request.user.username }}</p>
       </div>
       <div class="card-action">
