--- a/planit/main_app/templates/main_app/group_list.html
+++ b/planit/main_app/templates/main_app/group_list.html
@@ -9,6 +9,7 @@
       <div class="card-content">
           <span class="card-title">{{ group.name }}</span>
           {% if request.user.is_authenticated %}
+         <p class="cardDetails">Members: {{ group.members }}</p>
           <p class="cardDetails">Creator: {{ request.user.username }}</p>
           {% else %}
           <p class="cardDetails">Please log in to view who created this Group</p>
@@ -17,5 +18,5 @@
   </div>
 </a>
 {% endfor %}
-
+<div class="moon"></div>
 {% endblock %}
