--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -26,7 +26,7 @@
 <div class="row">
     <div class="col s6">
         <p>Add Poll</p>
-        <form method="POST">
+        <form action="{% url 'add_poll' event.id %}" method="POST">
             {% csrf_token %}
             <!-- Render the inputs -->
             {{ poll_form.as_p }}
