--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -18,6 +18,12 @@
   <input type="submit" value="Submit" class="btn">
 </form>
 </div>
+<div class="stars">
+  <div class="stars1"></div>
+  <div class="stars2"></div>
+  <div class="stars3"></div>
+  <div class="moonIndex"></div>
+</div>
 <script>
   const dateEl = document.getElementById('id_when');
   // M is Materialize's global variable
