--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -39,13 +39,17 @@
             {% csrf_token %}
             <div>
                 {% for poll in event.poll_set.all %}
+
                 <div class="card">
                     <div class="card-content">
                         <a href="{% url 'polls_detail' poll.id %}">Poll Details</a>
                         <span class="card-title">{{ poll.question }}</span>
-                        <p>Option 1: {{ poll.choice_one }} </p>
-                        <p>Option 2: {{ poll.choice_two }} </p>
-                        <p>Option 3: {{ poll.choice_three }} </p>
+                        <p>{{ poll.choice_one }}: <Span> {{ poll.choice_one_count }} votes</Span></p><input
+                            type="submit" class="btn" value="Vote">
+                        <p>{{ poll.choice_two }}: <Span> {{ poll.choice_two_count }} votes</Span></p>
+                        <input type="submit" class="btn" value="Vote">
+                        <p>{{ poll.choice_three }}: <Span> {{ poll.choice_three_count }} votes</Span></p>
+                        <input type="submit" class="btn" value="Vote">
                     </div>
 
                     <div class="card-action">
