--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -13,6 +13,10 @@
   </div>
 </a>
 {% endfor %}
-
-
+<div class="stars">
+  <div class="stars1"></div>
+  <div class="stars2"></div>
+  <div class="stars3"></div>
+  <div class="moonIndex"></div>
+</div>
 {% endblock %}
