--- a/planit/main_app/templates/main_app/group_form.html
+++ b/planit/main_app/templates/main_app/group_form.html
@@ -18,4 +18,10 @@
         <input type="submit" value="Submit" class="btn">
     </form>
 </div>
+<div class="stars">
+    <div class="stars1"></div>
+    <div class="stars2"></div>
+    <div class="stars3"></div>
+    <div class="moonGroup"></div>
+  </div>
 {% endblock %}
