--- a/planit/main_app/templates/main_app/group_list.html
+++ b/planit/main_app/templates/main_app/group_list.html
@@ -18,5 +18,10 @@
   </div>
 </a>
 {% endfor %}
-<div class="moon"></div>
+<div class="stars">
+  <div class="stars1"></div>
+  <div class="stars2"></div>
+  <div class="stars3"></div>
+  <div class="moon"></div>
+</div>
 {% endblock %}
