--- a/planit/main_app/templates/main_app/polls_detail.html
+++ b/planit/main_app/templates/main_app/polls_detail.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 
-{% for poll in polls %}
 <div class="row">
     <h3>Cast Your Vote</h3>
             <div class="row">
@@ -11,7 +10,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <hr />
-            
                         <form method="POST">
                             {% csrf_token %}
                             <div class="form-group">
@@ -40,9 +38,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-{% endfor %}
+<h1>poll<h1>
+
 {% endblock %}
