--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -17,6 +17,6 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="moonIndex"></div>
+  <div class="neptuneIndex"></div>
 </div>
 {% endblock %}
