--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -22,7 +22,7 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="moonIndex"></div>
+  <div class="mars"></div>
 </div>
 <script>
   const dateEl = document.getElementById('id_when');
