--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -19,6 +19,11 @@
     </div>
   </div>
 </div>
-
+<div class="stars">
+  <div class="stars1"></div>
+  <div class="stars2"></div>
+  <div class="stars3"></div>
+  <div class="jupiter"></div>
+</div>
 
 {% endblock %}
