--- a/planit/main_app/templates/main_app/polls_detail.html
+++ b/planit/main_app/templates/main_app/polls_detail.html
@@ -1,46 +1,43 @@
-
 {% extends "base.html" %}
 
 {% block content %}
 
-<div class="row">
-    <h3>Cast Your Vote</h3>
-            <div class="row">
-                    <h2>{{ poll.question }}</h2>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <hr />
-                        <form method="POST">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" name="poll" value="option1">
-                                        {{ poll.option_one }}
-                                    </label> &nbsp;
-                                    <label>
-                                        <input type="radio" name="poll" value="option2">
-                                        {{ poll.option_two }}
-                                    </label> &nbsp;
-                                    <label>
-                                        <input type="radio" name="poll" value="option3">
-                                        {{ poll.option_three }}
-                                    </label> &nbsp;
-                                </div>
-                            </div>
-            
-                            <hr />
-            
-                            <button type="submit" class="btn btn-info">
-                                Submit
-                            </button>
-                        </form>
+<div class="row" style="background-color: white;">
+    <h1>Cast Your Vote</h1>
+    <div class="row">
+        <h2>{{ poll.question }}</h2>
+        <div class="row">
+            <div class="col-lg-12">
+                <hr />
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="choice_one">
+                            <input type="radio" name="poll" id="choice_one" value="poll.choice_one" style="opacity:1;">
+                            {{ poll.choice_one }}
+                        </label>
+                        <br>
+                        <label for="choice_two">
+                            <input type="radio" name="poll" id="choice_two" value="poll.choice_two" style="opacity:1;">
+                            {{ poll.choice_two }}
+                        </label>
+                        <br>
+                        <label for="choice_three">
+                            <input type="radio" name="poll" id="choice_three" value="poll.choice_three"
+                                style="opacity:1;">
+                            {{ poll.choice_three }}
+                        </label>
                     </div>
-                </div>
+                    <hr />
+                    <button type="submit" class="btn btn-info">
+                        Submit
+                    </button>
+                </form>
             </div>
         </div>
     </div>
 </div>
-<h1>poll<h1>
+</div>
+</div>
 
 {% endblock %}
