--- a/planit/main_app/templates/registration/signup.html
+++ b/planit/main_app/templates/registration/signup.html
@@ -15,5 +15,6 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
+  <div class="pluto"></div>
 </div>
 {% endblock %}
