--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -53,6 +53,9 @@
                     </div>
 
                     <div class="card-action">
+                        <a href="{%url 'vote' poll.id%}">Vote</a>
+                        <a href="{%url 'results' poll.id%}">View Results</a>
+                        <br>
                         <a href="{% url 'events_update' event.id %}">Edit</a>
                         <a href="{% url 'events_delete' event.id %}">Delete</a>
                     </div>
