--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -17,6 +17,10 @@
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
+    <div class="shootingStar"></div>
+    <div class="shootingStar"></div>
+    <div class="shootingStar"></div>
 </div>
 <div class="moon"></div>
+
 {% endblock %}
