--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -44,12 +44,9 @@
                     <div class="card-content">
                         <a href="{% url 'polls_detail' poll.id %}">Poll Details</a>
                         <span class="card-title">{{ poll.question }}</span>
-                        <p>{{ poll.choice_one }}: <Span> {{ poll.choice_one_count }} votes</Span></p><input
-                            type="submit" class="btn" value="Vote">
-                        <p>{{ poll.choice_two }}: <Span> {{ poll.choice_two_count }} votes</Span></p>
-                        <input type="submit" class="btn" value="Vote">
-                        <p>{{ poll.choice_three }}: <Span> {{ poll.choice_three_count }} votes</Span></p>
-                        <input type="submit" class="btn" value="Vote">
+                        <p>{{ poll.choice_one }}: <Span class="it"> {{ poll.choice_one_count }} votes</Span></p>
+                        <p>{{ poll.choice_two }}: <Span class="it"> {{ poll.choice_two_count }} votes</Span></p>
+                        <p>{{ poll.choice_three }}: <Span class="it"> {{ poll.choice_three_count }} votes</Span></p>
                     </div>
 
                     <div class="card-action">
