--- a/planit/main_app/templates/polls/vote.html
+++ b/planit/main_app/templates/polls/vote.html
@@ -13,17 +13,17 @@
                     {% csrf_token %}
                         <div class="form-group">
                             <label for="choice_one">
-                                <input type="radio" name="poll" id="choice_one" value="poll.choice_one" style="opacity:1;">
+                                <input type="radio" name="poll" id="choice_one" value="choice_one" style="opacity:1;">
                                 {{ poll.choice_one }}
                             </label>
                                 <br>
                             <label for="choice_two">
-                                <input type="radio" name="poll" id="choice_two" value="poll.choice_two" style="opacity:1;">
+                                <input type="radio" name="poll" id="choice_two" value="choice_two" style="opacity:1;">
                                 {{ poll.choice_two }}
                             </label>
                             <br>
                             <label for="choice_three">
-                                <input type="radio" name="poll" id="choice_three" value="poll.choice_three"
+                                <input type="radio" name="poll" id="choice_three" value="choice_three"
                                         style="opacity:1;">
                                     {{ poll.choice_three }}
                             </label>
