Jeremiah updated the README

--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -17,10 +17,11 @@
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
+</div>
+<div class="moon"></div>
+<div class="skyContainer">
     <div class="shootingStar"></div>
     <div class="shootingStar"></div>
     <div class="shootingStar"></div>
 </div>
-<div class="moon"></div>
-
 {% endblock %}
