--- a/planit/main_app/templates/polls/results.html
+++ b/planit/main_app/templates/polls/results.html
@@ -13,4 +13,6 @@
     <li class="list-group-item">{{ poll.choice_two }} &mdash; <strong>{{ poll.choice_two_count }}</strong></li>
     <li class="list-group-item">{{ poll.choice_three }} &mdash; <strong>{{ poll.choice_three_count }}</strong></li>
 </ul>
+<br>
+<a href="{%url 'events/'%}">Back to event</a>
 {% endblock %}
