--- a/planit/main_app/templates/about.html
+++ b/planit/main_app/templates/about.html
@@ -31,10 +31,27 @@
     <br>
     Thank you for considering Planit for your next event. We look forward to helping you plan the perfect gathering!
 </p>
+
 <div class="stars">
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
 </div>
-<div class="moonAbout"></div>
+
+<div class="planets">
+    <div class="moonAbout parallax" data-value="-9"></div>
+    <div class="venusAbout parallax" data-value="3"></div>
+</div>
+
+<script type="text/javascript">
+    document.addEventListener('mousemove', parallax);
+    function parallax(e){
+        document.querySelectorAll('.parallax').forEach(function(move){
+            var moving_value = move.getAttribute('data-value');
+            var x = (e.clientX * moving_value) / 250;
+            var y = (e.clientY * moving_value) / 250;
+            move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+        });
+    }
+</script>
 {% endblock %}
