--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -56,8 +56,12 @@
                         <a class="itLight" href="{%url 'results' poll.id%}">View Results</a>
                         <br>
                         <br>
+                        <!-- <form action="{% url delete_poll' event.id poll.id}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="btn">Delete</button>
+                        </form> -->
                         <!-- <a href="{% url 'events_update' event.id %}">Edit</a> -->
-                        <a class="deleteBtn" href="{% url 'polls_delete' poll.id %}">Delete</a>
+
                     </div>
                 </div>
                 {% endfor %}
@@ -69,7 +73,21 @@
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
-    <div class="jupiter"></div>
+    <div class="jupiter parallax" data-value="6"></div>
+    <div class="neptuneEventDetail parallax" data-value="-13"></div>
+    <div class="earthDetail parallax" data-value="-4"></div>
 </div>
+
+<script type="text/javascript">
+    document.addEventListener('mousemove', parallax);
+    function parallax(e) {
+        document.querySelectorAll('.parallax').forEach(function (move) {
+            var moving_value = move.getAttribute('data-value');
+            var x = (e.clientX * moving_value) / 250;
+            var y = (e.clientY * moving_value) / 250;
+            move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+        });
+    }
+</script>
 
 {% endblock %}
