--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -17,6 +17,22 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="neptuneIndex"></div>
+  <div class="neptuneIndex parallax" data-value="-13"></div>
 </div>
+
+<div class="planets">
+  <div class="venusIndex parallax" data-value="3"></div>
+</div>
+
+<script type="text/javascript">
+  document.addEventListener('mousemove', parallax);
+  function parallax(e){
+      document.querySelectorAll('.parallax').forEach(function(move){
+          var moving_value = move.getAttribute('data-value');
+          var x = (e.clientX * moving_value) / 250;
+          var y = (e.clientY * moving_value) / 250;
+          move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+      });
+  }
+</script>
 {% endblock %}
