--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -18,10 +18,22 @@
     <div class="stars2"></div>
     <div class="stars3"></div>
 </div>
-<div class="moon"></div>
+<div class="moon" data-value="5" ></div>
 <div class="skyContainer">
     <div class="shootingStar"></div>
     <div class="shootingStar"></div>
     <div class="shootingStar"></div>
 </div>
+
+<script type="text/javascript">
+    document.addEventListener('mousemove', parallax);
+    function parallax(e){
+        document.querySelectorAll('.moon').forEach(function(move){
+            var moving_value = move.getAttribute('data-value');
+            var x = (e.clientX * moving_value) / 250;
+            var y = (e.clientY * moving_value) / 250;
+            move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+        });
+    }
+</script>
 {% endblock %}
