--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -22,7 +22,8 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="mars"></div>
+  <div class="mars parallax" data-value="14"></div>
+  <div class="earth parallax" data-value="-4"></div>
 </div>
 <script>
   const dateEl = document.getElementById('id_when');
@@ -55,6 +56,18 @@
   // the textarea, as opposed to when they press any key. It's petty 
   // but a textarea shouldn't grow when somebody presses an arrow key 
   // or something.
+</script>
+
+<script type="text/javascript">
+  document.addEventListener('mousemove', parallax);
+  function parallax(e){
+      document.querySelectorAll('.parallax').forEach(function(move){
+          var moving_value = move.getAttribute('data-value');
+          var x = (e.clientX * moving_value) / 250;
+          var y = (e.clientY * moving_value) / 250;
+          move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+      });
+  }
 </script>
 
 {% endblock %}
