--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -23,7 +23,21 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="jupiter"></div>
+  <div class="jupiter parallax" data-value="5"></div>
+  <div class="neptuneGroupDetail parallax" data-value="-13"></div>
+  <div class="moonGroupDetail parallax" data-value="-5" ></div>
 </div>
+
+<script type="text/javascript">
+  document.addEventListener('mousemove', parallax);
+  function parallax(e){
+      document.querySelectorAll('.parallax').forEach(function(move){
+          var moving_value = move.getAttribute('data-value');
+          var x = (e.clientX * moving_value) / 250;
+          var y = (e.clientY * moving_value) / 250;
+          move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+      });
+  }
+</script>
 
 {% endblock %}
