--- a/planit/main_app/templates/main_app/group_form.html
+++ b/planit/main_app/templates/main_app/group_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="addEventContainer">
     {% if object %}
-        <h1 class="addGroupTitle">Edit {{object.name}}</h1>
+        <h1 class="addGroupTitle">Edit <span class="it">{{object.name}}</span></h1>
     {% else %}
         <h1 class="addGroupTitle">Add <span class="it">Group</span></h1>
     {% endif %}
@@ -22,6 +22,23 @@
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
-    <div class="moonGroup"></div>
-  </div>
+</div>
+
+<div class="planets">
+    <div class="earthAddGroup parallax" data-value="4"></div>
+    <div class="marsGroup parallax" data-value="12"></div>
+    <div class="jupiterGroup parallax" data-value="-6"></div>
+</div>
+
+  <script type="text/javascript">
+    document.addEventListener('mousemove', parallax);
+    function parallax(e){
+        document.querySelectorAll('.parallax').forEach(function(move){
+            var moving_value = move.getAttribute('data-value');
+            var x = (e.clientX * moving_value) / 250;
+            var y = (e.clientY * moving_value) / 250;
+            move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+        });
+    }
+</script>
 {% endblock %}
