--- a/planit/main_app/templates/main_app/group_list.html
+++ b/planit/main_app/templates/main_app/group_list.html
@@ -22,6 +22,18 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="moon"></div>
+  <div class="moon" data-value="7"></div>
 </div>
+
+<script type="text/javascript">
+  document.addEventListener('mousemove', parallax);
+  function parallax(e){
+      document.querySelectorAll('.moon').forEach(function(move){
+          var moving_value = move.getAttribute('data-value');
+          var x = (e.clientX * moving_value) / 250;
+          var y = (e.clientY * moving_value) / 250;
+          move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+      });
+  }
+</script>
 {% endblock %}
