--- a/planit/main_app/templates/registration/login.html
+++ b/planit/main_app/templates/registration/login.html
@@ -15,6 +15,18 @@
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-  <div class="venus"></div>
+  <div class="venus" data-value="3"></div>
 </div>
+
+<script type="text/javascript">
+  document.addEventListener('mousemove', parallax);
+  function parallax(e){
+      document.querySelectorAll('.venus').forEach(function(move){
+          var moving_value = move.getAttribute('data-value');
+          var x = (e.clientX * moving_value) / 250;
+          var y = (e.clientY * moving_value) / 250;
+          move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+      });
+  }
+</script>
 {% endblock %}
