finally got the deployment working andmade a small change to the events details htmlt to remove in line styling

--- a/planit/main_app/templates/polls/vote.html
+++ b/planit/main_app/templates/polls/vote.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="row" style="background-color: white;">
+<div class="row">
     <h1>Cast Your Vote</h1>
     <div class="row">
         <h2>{{ poll.question }}</h2>
