--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -410,6 +410,15 @@ textarea:focus {
 .row {
     position: relative;
     z-index: 4;
+    background-color: rgba(13, 50, 77);
+    border-radius: 2px 2px 0 0 !important;
+    z-index: 4;
+}
+
+.PollTitle {
+    color: white;
+    padding-bottom: 7px;
+    border-bottom: 2px solid #124569;
 }
 
 .card {
