--- a/planit/main_app/templates/polls/vote.html
+++ b/planit/main_app/templates/polls/vote.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <div class="row">
-    <h1>Cast Your Vote</h1>
+    <h1 class="myEventsTitle">Cast Your <span class="it">Vote</span></h1>
     <div class="row">
-        <h2>{{ poll.question }}</h2>
+        <h2 class="pollTitle">{{ poll.question }}</h2>
         <div class="row">
             <div class="col-lg-12">
                 <hr />
@@ -39,5 +39,22 @@
         </div>
     </div>
 </div>
-
+<div class="stars">
+    <div class="stars1"></div>
+    <div class="stars2"></div>
+    <div class="stars3"></div>
+    <div class="venus" data-value="3"></div>
+  </div>
+  
+  <script type="text/javascript">
+    document.addEventListener('mousemove', parallax);
+    function parallax(e){
+        document.querySelectorAll('.venus').forEach(function(move){
+            var moving_value = move.getAttribute('data-value');
+            var x = (e.clientX * moving_value) / 250;
+            var y = (e.clientY * moving_value) / 250;
+            move.style.transform = "translateX(" + x + "px) translateY(" + y + "px)";
+        });
+    }
+  </script>
 {% endblock %}
